Fix h1 vertical align

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,10 +2,14 @@ body .reveal .slides {
   text-align: left;}
 
 .reveal h1 {
-  font-size: 2.55em; }
+  font-size: 2.55em;
+  position: relative;
+  top: -40px;
+}
 
 .reveal h2 {
-  font-size: 1.99em; }
+  font-size: 1.99em;
+}
 
 .reveal pre {
   width: 100%;
